--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-src/main/java/secure/*
+src/main/java/secure
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
